--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,10 @@
 # ---------------------------------------------------------------
 
 # Site
-title: Anchoret
-subtitle: Choose You Own Path
+title: Anchoret 初见
+subtitle: See You First Time
 description: 逢君一笑，人间无此欢喜
-author: 诗翔
+author: 清歌
 # Support language: de, en, fr-FR, id, ja, ko, pt-BR, pt, ru, zh-Hans, zh-hk, zh-tw
 language: zh-Hans
 date_format: '%Y-%m-%d'
@@ -214,8 +214,7 @@ font:
 #social:
   #LinkLabel: Link
 social:
-    GitHub: https://github.com/ShixiangWang
-    简书: http://www.jianshu.com/u/b6608e27dc74
+    GitHub: https://github.com/Hope-TXIAO
 # Social Links Icons
 # Icon Mapping:
 #   Map a menu item to a specific FontAwesome icon name.
@@ -228,12 +227,10 @@ social_icons:
   GitHub: github
   Twitter: twitter
   Weibo: weibo
-  简书: etsy
 
   
 # reward
 reward_comment: 人该是自己生活的主宰，而不是别人手里的行货
-alipay: /images/reward_image/alipay-reward-image.jpg
 # Sidebar Avatar
 # in directory: /assets/images/avatar.gif
 #avatar:
@@ -383,7 +380,7 @@ han: false
 #swiftype_key:
 
 # Baidu Analytics ID
-baidu_analytics: 36443ede179652b0cf6a526f12b1976f
+baidu_analytics:
 
 # Duoshuo ShortName
 #duoshuo_shortname:
@@ -504,18 +501,6 @@ leancloud_visitors:
 busuanzi_count:
   # count values only if the other configs are false
   enable: true
-  # custom uv span for the whole site
-  site_uv: true
-  site_uv_header: 本站访问数
-  site_uv_footer: 人次
-  # custom pv span for the whole site
-  site_pv: true
-  site_pv_header: 本站总访问量
-  site_pv_footer: 次
-  # custom pv span for one page only
-  page_pv: true
-  page_pv_header: 本文总阅读量
-  page_pv_footer: 次
 
 
 # Tencent analytics ID
