--- a/_config.yml
+++ b/_config.yml
@@ -12,12 +12,6 @@ author: 清歌
 language: zh-Hans
 date_format: '%Y-%m-%d'
 
-# title
-links_title: QQ业务网站
-# links
-links:
-  http://hopet.dsvip6.cn
-
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com' and baseurl as '/child'
 url:
@@ -38,7 +32,7 @@ paginate: 10
   #paginate_path: "/page:num/"
 
 # Handling Reading
-exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md", "Gemfile", "Gemfile.lock", "README_en.md"]
+exclude: [".rvmrc", ".rbenv-version", "Rakefile", "changelog.md", "Gemfile", "Gemfile.lock"]
 
 # Separator
 excerpt_separator: <!-- more -->
