--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,15 @@ url:
 baseurl:
 permalink: pretty
 
+# title
+16
+links_title: Links
+17
+links:
+18
+  猫咪接口: https://www.906rr.com/enter/android.html
+
+
 # Pagination
 paginate: 10
 #paginate_path: "/page:num/"
