--- a/_config.yml
+++ b/_config.yml
@@ -285,7 +285,7 @@ sidebar:
   #Title: http://example.com/
 links_title: 推荐浏览
 links:
-  清歌的代刷网: http://hopet.dsvip6.cn
+  清歌的代刷网: http://art.cxhhmy.com
   阮一峰的网络日志: http://www.ruanyifeng.com/blog/archives.html
   R的极客理想系列: http://blog.fens.me/series-r/
   谢益辉: https://yihui.name/
